add notes about jvm inheritance and defaults for kotlin daemon